# Peacebot-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  models.py  pyproject.toml  requirements.txt  tortoise_config.py
.github/workflows/: codeql.yml
peacebot/: __init__.py  __main__.py
peacebot/assets/: banner.txt
peacebot/config/: __init__.py  bot.py  database.py
peacebot/core/: bot.py  event_handler.py
peacebot/core/plugins/: ping.py
peacebot/core/plugins/Admin/: __init__.py  admin.py  evals.py  owner.py
peacebot/core/plugins/AutoResponse/: __init__.py  autoresponse.py
peacebot/core/plugins/Fun/: __init__.py  animals.py  nsfw.py
peacebot/core/plugins/Miscellaneous/: __init__.py  misc.py  rtfm.py
peacebot/core/plugins/Moderation/: mod.py  mod_helpers.py
peacebot/core/plugins/Music/: __init__.py  music.py
peacebot/core/utils/: __init__.py  activity.py  buttons.py  embed_colors.py  errors.py  helper_functions.py  permissions.py  rtfm_helper.py  time.py  utilities.py
wheels/: lavasnek_rs-0.1.0_alpha.3-cp310-cp310-manylinux_2_24_x86_64.whl
